--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="user-profile">
   <div class="profile row">
-    <div class="<col-md-4 avatar>">
+    <div class="col-md-4 avatar">
       <div class="wrapper">
         <img src="https://pbs.twimg.com/media/C8RYkbxUMAAMqvy.jpg" alt="profile image">
       </div>
