--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
         </a>
       </div>
       <ul class="posts">
-        <li><span>12</span> posts</li>
+        <li><span><%= @posts.count %></span> posts</li>
         <li><span>695</span> following</li>
         <li><span>745</span> followers</li>
       </ul>
@@ -43,14 +43,10 @@
   </div>
 
   <div class="user-images">
-    <div class="wrapper">
-      <img src="https://images.pexels.com/photos/614484/pexels-photo-614484.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
-    </div>
-    <div class="wrapper">
-      <img src="https://images.pexels.com/photos/2009963/pexels-photo-2009963.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
-    </div>
-    <div class="wrapper">
-      <img src="https://images.pexels.com/photos/1098460/pexels-photo-1098460.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
-    </div>
+    <% @posts.each do |post| %>
+      <div class="wrapper">
+        <%= image_tag post.image %>
+      </div>
+    <% end %>
   </div>
 </div>
