pagination with kaminari added, styling for pagination links added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <section class="post">
       <div class="user">
         <div class="avatar">
-          
+
         </div>
         <div class="username">
           <%= post.user.username %>
@@ -15,4 +15,6 @@
       </div>
     </section>
   <% end %>
+
+  <%= paginate @posts %>
 </div>
