--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -65,7 +65,19 @@
         </div>
       </div>
       <div class="form-group row">
-        <div class="col-sm-3">
+        <%= f.label :avatar, class: 'col-sm-3 col-form-label' %>
+        <% if current_user.avatar.attached? %>
+          <div class="col-sm-9">
+            <%= image_tag current_user.avatar, class: 'avatar' %>
+          </div>
+        <% else %>
+          <div class="col-sm-9">
+            <%= f.file_field :avatar, class: 'form-control' %>
+          </div>
+        <% end %>
+      </div>
+      <div class="form-group row">
+        <div class="col-sm-9">
         </div>
         <div class="col-sm-9">
           <%= f.submit "Submit", class: 'btn btn-primary' %>
