--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,11 +3,13 @@
     <section class="post">
       <div class="user">
         <div class="avatar">
-
+          <% if post.user.avatar.attached? %>
+            <%= link_to user_path(post.user) do %>
+              <%= image_tag post.user.avatar %>
+            <% end %>
+          <% end %>
         </div>
-        <div class="username">
-          <%= post.user.username %>
-        </div>
+        <%= link_to post.user.username, user_path(post.user), class: 'username' %>
       </div>
       <%= image_tag post.image, class: 'main-image' %>
       <div class="description">
